--- a/preseed.cfg
+++ b/preseed.cfg
@@ -1,7 +1,7 @@
 
 # Assume en_GB with UK keyboard layout
 d-i debian-installer/locale string en_GB
-d-i console-keymaps-at/keymap select uk
+d-i console-keymaps-at/keymap string uk
 
 # Use our mirror
 d-i mirror/country string enter information manually
