--- a/preseed.cfg
+++ b/preseed.cfg
@@ -10,3 +10,14 @@ d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 
 popularity-contest popularity-contest/participate boolean true
+
+# Set 'sid' as the default suite, but allow modification.
+d-i mirror/suite string sid
+d-i mirror/suite seen false
+
+# Install GRUB automatically to the MBR if no other operating
+# system is detected (fairly safe).
+d-i grub-installer/only_debian boolean true
+
+# Avoid 'Installation is complete' message.
+d-i finish-install/reboot_in_progress note
